# qc-opendrive

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  checker_bundle_doc.md  format.json  main.py  pull_request_template.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: meeting-minutes-template.md  question.md
.github/workflows/: test.yml
checks/: __init__.py
checks/base_checks/: __init__.py  check_file_exist.py  check_xml_parsing.py
checks/geometry_checks/: check_paramPoly3.py  check_road_geometry_length.py  check_road_min_length.py
checks/schema_checks/: __init__.py  check_ID_type.py  check_schema.py  check_version.py
checks/semantic_checks/: check_junction_connections.py  check_junction_lane_linkage.py  check_junction_lane_linkage_order.py  check_laneSection_valid_s.py  check_lane_valid_sOffset.py  check_lane_valid_width.py  check_lane_validity.py  check_lanes_order.py  check_object_size.py  check_road_linkage.py  check_road_linkage_backward.py  check_signal_position.py
doc/: List_of_Rules_OXDR.adoc
examples/Schema/: InvalidLaneIDCrossing.xodr  InvalidSchemaRoad.xodr  (+1 more)
licenses/: readme.md
manifest_templates/: linux_manifest.json  windows_xodr_manifest.json
original_implementation/: config.json
qc_opendrive/: __init__.py  __main__.py  basic_preconditions.py  constants.py  main.py  version.py
src/: main.py
tests/: test_basic_checks.py  test_geometry_checks.py  test_performance_checks.py  test_schema_checks.py  test_semantic_checks.py  test_setup.py  test_smoothness_checks.py  test_spirals.py  test_utils.py  test_version.py
(+373 files in other folders)
